--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "jimp": "^0.16.1"
+    "express": "^4.17.1"
   }
 }
